<resources>
    <string name="app_name">CoboVault</string>
    <string name="navigation_drawer_open">Open navigation bar</string>
    <string name="navigation_drawer_close">Close navigation bar</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan_qr_code">Scan QR Code</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="drawer_menu_my_vault">My Cobo Vault</string>
    <string name="drawer_menu_multisig">Multisig Wallet</string>
    <string name="drawer_menu_add_remove">Add / Hide Assets</string>
    <string name="drawer_menu_sync">Sync Mobile</string>
    <string name="drawer_menu_setting">Settings</string>
    <string name="drawer_menu_about">About Cobo Vault</string>
    <string name="title_about">About Cobo Vault</string>
    <string name="title_setting">Settings</string>
    <string name="title_sync">Export to Cobo Vault Watch-Only</string>
    <string name="add_remove_coin">Add / Hide Assets</string>
    <string name="scan">Scan QR Code</string>
    <string name="scan_hint">Align QR Code within frame to scan</string>
    <string name="pattern_lock">Pattern Unlock</string>
    <string name="pattern_lock_hint">Please draw an unlock pattern</string>
    <string name="switch_to_password">Switch to password unlock</string>
    <string name="www_cobo_com" translatable="false">www.cobo.com</string>
    <string name="device_info">Serial Number: %s \n   Firmware Version：%s\n SE Firmware Version: %s\n System Version：%s </string>
    <string name="addr" translatable="false">addr.</string>
    <string name="asset_list_empty">Please go to Menu > Add / Hide Assets to add assets you need</string>
    <string name="mnemonic_hint1">"The recovery phrase is used to restore your wallet. Use a Cobo Tablet to record your 24 recovery phrase words and store them securely."</string>
    <string name="mnemonic_hint2">Do not share your recovery phrase with anyone or take a picture of it. If it is lost or stolen, all assets are irretrievable.</string>
    <string name="saved">Recovery Phrase Saved</string>
    <string name="tab_my_pubkey">My PubKey</string>
    <string name="tab_transaction_history">SIGNATURES</string>
    <string-array name="step_label">
        <item>Authentication</item>
        <item>Set Password</item>
        <item>Create Vault</item>
        <item>Watch-Only Wallet</item>
        <item>Complete</item>
    </string-array>
    <string name="create_addr">Create %s Address</string>
    <string name="signing_hint">Signing…</string>
    <string name="scan_progress">Please continue scanning: %s</string>
    <string name="eos_hint">Here is your %s public key （safe to share）</string>
    <string name="eos_pubkey">Public Key：\n%s</string>
    <string name="receive_warning">This address is only for BTC, other digital assets sent to the above address will be lost.</string>
    <string name="receive_coin">Receive BTC</string>
    <string name="version_update_hint"><![CDATA[Please visit: <font color="#00cdc3">https://cobo.com/hardware-wallet/downloads<font/> to check for firmware updates. If you are not using the latest firmware, download it from the official Cobo Vault website and save it on a microSD card (FAT32 format, 32GB or less storage). Transfer the file to your device as shown in the image below. (microSD card not included with purchase.)]]></string>
    <string name="version">Version </string>
    <string name="setting_language">Language</string>
    <string name="setting_vibrator">Vibrate On / Off</string>
    <string name="setting_brightness">Screen Brightness</string>
    <string name="setting_screen_off_time">Screen Timeout Length</string>
    <string-array name="language_entries" translatable="false">
        <item>English</item>
        <item>中文</item>
    </string-array>
    <string-array name="language_values" translatable="false">
        <item>en</item>
        <item>zh_rCN</item>
    </string-array>
    <string-array name="network_entries">
        <item>Main Net</item>
        <item>Test Net</item>
    </string-array>
    <string-array name="network_values" translatable="false">
        <item>mainnet</item>
        <item>testnet</item>
    </string-array>
    <string-array name="watch_wallet_list">
        <item>Cobo Vault App</item>
        <item>Electrum</item>
        <item>Wasabi Wallet</item>
        <item>BlueWallet</item>
        <item>BTCPay Server</item>
        <item>Generic Wallet</item>
    </string-array>
    <string-array name="watch_wallet_list_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>100</item>
    </string-array>
    <string-array name="address_format">
        <item>Nested SegWit（P2SH-P2WPKH）</item>
        <item>Native SegWit（P2WPKH）</item>
    </string-array>
    <string-array name="address_format_subtitle">
        <item><![CDATA[eg. <font color="#00cdc3">3<font/>7VucYSaXLCAsxYyAPfbSi9eh4iEcbShgf]]></item>
        <item><![CDATA[eg. <font color="#00cdc3">bc1<font/>qcr8te4kr609gcawutmrza0j4xv80jy8z306fyu]]></item>
    </string-array>
    <string-array name="address_format_subtitle_testnet">
        <item><![CDATA[eg. <font color="#00cdc3">2<font/>7VucYSaXLCAsxYyAPfbSi9eh4iEcbShgf]]></item>
        <item><![CDATA[eg. <font color="#00cdc3">tb1<font/>qcr8te4kr609gcawutmrza0j4xv80jy8z306fyu]]></item>
    </string-array>
    <string-array name="address_format_value" translatable="false">
        <item>P2SH-P2WPKH</item>
        <item>P2WPKH</item>
    </string-array>
    <string-array name="screen_off_entries">
        <item>15 secs</item>
        <item>30 secs</item>
        <item>1 min</item>
        <item>2 mins</item>
        <item>5 mins</item>
        <item>10 mins</item>
    </string-array>
    <string-array name="screen_off_values" translatable="false">
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>
    <string name="tab_my_address">Receiving</string>
    <string name="tab_my_change_address">Change</string>
    <string name="web_auth1"><![CDATA[1. Please visit <font color="#00cdc3">https://cobo.com/auth<font/>]]></string>
    <string name="web_auth2"><![CDATA[2. Click on <font color="#00cdc3">\"Scan QR Code\" <font/>below and scan the QR code displayed on the website]]></string>
    <string name="web_auth3">3. Enter the code displayed on your Cobo Vault on the official website for authentication;</string>
    <string name="web_auth4">4. If authentication fails, do not use your device as it may have been compromised</string>
    <string name="skip">Skip</string>
    <string name="read_confirm"><![CDATA[I\'ve read and agreed to the <font color="#00cdc3"><u>\"Terms of Service\"</u><font/>, and  <font color="#00cdc3"><u>\"Privacy Policy\"</u><font/> ]]></string>
    <string name="create_vault_hint"><![CDATA[1.Touch <font color="#00cdc3">\"Create Vault\"<font/> to generate a new Vault.]]></string>
    <string name="import_vault_hint"><![CDATA[2.Touch <font color="#00cdc3">\"Import Vault\"<font/> to import an existing HD wallet.]]></string>
    <string name="license">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="input_mnemonic_hint">Please enter your %d-word recovery phrase in the table below.</string>
    <string name="input_mnemonic">Enter Recovery Phrase</string>
    <string name="pwd_again_hint">Confirm password</string>
    <string name="pwd_hint">Please enter your password</string>
    <string name="password_verify_wrong">Passwords do not match.</string>
    <string name="passphrase_not_match">Passphrase do not match.</string>
    <string name="password_input_wrong">Must include upper and lower case letters and numbers.</string>
    <string name="mnemonic_hint"><![CDATA[Important Information: <br>1. The recovery phrase is the only way retrieve your assets. Please use record your recovery phrase carefully and store in a safe location.  <br><br>2. Do not take photos of your recovery phrase or store on a device connected to the Internet. Do not share the recovery phrase with others.  <br><br>3. Visit <font color="#00cdc3">https://cobo.com/hardware-wallet/cobo-tablet<font/> to purchase a Cobo Tablet to store your recovery phrase with a higher degree of security.]]></string>
    <string name="generate_mnemonic">Generate Recovery Phrase</string>
    <string name="next">Next</string>
    <string name="and">And</string>
    <string name="import_vault">Import Vault</string>
    <string name="create_vault">Create Vault</string>
    <string name="confirm_mnemonic">Confirm Recovery Phrase</string>
    <string name="confirm_input_mnemonic_hint">Please enter your %d-word recovery phrase in the table below.</string>
    <string name="complete">Done</string>
    <string name="password_verify_too_short">Too short</string>
    <string name="sync_hint2"><![CDATA[Download Cobo Vault Mobile:<br><font color="#00cdc3"><u>https://cobo.com/hardware-wallet/downloads</u><font/><br>]]></string>
    <string name="sync_hint1"><![CDATA[Scan QR Code with Cobo Vault Mobile]]></string>
    <string name="wrong_mnemonic_please_check">recovery phrase incorrect, please try again.</string>
    <string name="dots_not_enough">Please connect at least 4 dots.</string>
    <string name="input_pattern_again">Please draw again to confirm.</string>
    <string name="passphrase_hint3">Passphrases cannot exceed 128 characters. Can consist of upper and lower case letters, digits, and symbols, but not spaces. Case Sensitive.</string>
    <string name="passphrase_hint2">Enter a Passphrase (case sensitive)</string>
    <string name="passphrase_hint1">Important Information:\n1. When a Hidden Vault is created, its Passphrase cannot be changed. If the Passphrase is lost or forgotten, the Hidden Vault and all its assets will be irretrievable. Record and store the Passphrase securely before creating a Hidden Vault \n2. Keep the Passphrase field blank to enter the default Vault</string>
    <string name="passphrase_hint">Please Input a Passphrase</string>
    <string name="passphrase_title">Passphrase Vault</string>
    <string name="set_pattern">Set Pattern Lock</string>
    <string name="system_settings">System Settings</string>
    <string name="white_list">White List</string>
    <string name="create_import_vault">Create/Import Vault</string>
    <string name="safety_instruction">Security Manual</string>
    <string name="setting_license">Terms of Service</string>
    <string name="factory_reset">Wipe Device</string>
    <string name="confirm">Confirm</string>
    <string name="signing_history">Signatures</string>
    <string name="change_password">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="fingerprint_settings">Fingerprint Settings</string>
    <string name="set_passphrase">Passphrase Vault</string>
    <string name="electrum_qrcode_hint"><![CDATA[Difficulty scanning? Tap the QR code to adjust size<br>or <u>touch here to export the file with microSD</u>.]]></string>
    <string name="scan_electrum_hint">Difficulty scanning? You can import pending transactions from Electrum using a microSD card.</string>
    <string name="watch_only_wallet">Watch-only Wallet</string>
    <string name="network">Blockchain</string>
    <string name="wallet_verification_code"><![CDATA[Wallet Verification Code：<font color="#00cdc3">%s<font>]]></string>
    <string name="export_multisig_to_cosigner">Export wallet to cosigners</string>
    <string name="export_to_cosigner_hint">Invite cosigners to scan the QR Code,\nor export file for cosigners to import</string>
    <string name="manage_myltisig_wallet">Manage Multisig Wallet</string>
    <string name="view_wallet_info">Wallet Info</string>
    <string name="check_mnemonic">Recovery Phrase Check</string>
</resources>