<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Cobo
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ in the file COPYING.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/arrow_left"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/export_multisig_to_cosigner"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </androidx.appcompat.widget.Toolbar>

        <include layout="@layout/divider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:text="@string/export_to_cosigner_hint"
                    android:textColor="@color/white" />

                <com.cobo.cold.ui.views.SpanedTextView
                    android:id="@+id/verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_verification_code"
                    android:textColor="@color/white" />

                <include
                    android:id="@+id/qrcode_layout"
                    layout="@layout/dynamic_qrcode" />

                <com.cobo.cold.ui.views.SpanedTextView
                    android:id="@+id/export_to_sdcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/electrum_qrcode_hint"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/export_to_electrum"
                    style="@style/AcceptButton"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/complete" />

                <TextView
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>