<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Cobo
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ in the file COPYING.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="passphrase"
            type="androidx.databinding.ObservableField&lt;String>" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/arrow_left"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/passphrase_title"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </androidx.appcompat.widget.Toolbar>

        <include
            android:id="@+id/divider"
            layout="@layout/divider" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/passphrase_hint"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/hint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/passphrase_hint1"
            android:textColor="@android:color/white"
            android:layout_marginHorizontal="16dp"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp">

            <CheckBox
                android:id="@+id/eye"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="end|center_vertical"
                android:alpha="@{eye.checked ? 1f : 0.4f}"
                android:button="@drawable/eye" />

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@id/eye"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/passphrase_hint2"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="128"
                android:text="@={passphrase}"
                android:textColor="@color/white"
                android:textColorHint="@color/white40"
                android:textSize="14sp"
                tools:ignore="Autofill" />

            <include
                layout="@layout/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>


        <TextView
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white40"
            android:text="@string/passphrase_hint3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_marginTop="32dp"
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            style="@style/AcceptButton"
            android:layout_margin="16dp"
            android:text="@string/confirm" />
    </LinearLayout>
</layout>