<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Cobo
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ in the file COPYING.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="clickHandler"
            type="com.cobo.cold.ui.fragment.multisig.ClickHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.setup.MnemonicInputFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/arrow_left"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/manage_myltisig_wallet"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </androidx.appcompat.widget.Toolbar>

        <include layout="@layout/divider" />
        <com.cobo.cold.ui.views.MultiSigItem
            android:id="@+id/sign_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->clickHandler.onClick((int)@id/action_to_txList)}"
            app:title="@string/signing_history"/>
        <com.cobo.cold.ui.views.MultiSigItem
            android:id="@+id/export_wallet_to_cosigner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->clickHandler.onClick((int)@id/action_export_wallet_to_cosigner)}"
            app:title="@string/export_multisig_to_cosigner"/>
        <!--com.cobo.cold.ui.views.MultiSigItem
            android:id="@+id/export_wallet_to_electrum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->clickHandler.onClick((int)@id/action_export_wallet_to_electrum)}"
            app:title="@string/export_wallet_to_electrum"/-->
        <com.cobo.cold.ui.views.MultiSigItem
            android:id="@+id/wallet_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->clickHandler.onClick((int)@id/action_to_multisig_wallet_info)}"
            app:title="@string/view_wallet_info"/>

    </LinearLayout>
</layout>