<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Cobo
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ in the file COPYING.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="progress"
            type="String" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.main.QRCodeScanFragment"
        android:orientation="vertical"
        android:keepScreenOn="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/arrow_left"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:text="@string/scan" />
        </androidx.appcompat.widget.Toolbar>

        <SurfaceView
            android:id="@+id/preview"
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.cobo.cold.scan.view.PreviewFrame
            android:id="@+id/frameView"
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/scan_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/scan_progress"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@{progress}" />

        <TextView
            android:id="@+id/align_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="300dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:text="@string/scan_hint" />

        <TextView
            android:id="@+id/electrum_scan_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/align_hint"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:text="@string/scan_electrum_hint"/>

    </RelativeLayout>
</layout>